@@ -1,3 +1,6 @@
+2015-10-28 Michele Pinamonti <michele.pinamonti@gmail.com>
+        * TtHFit: add protection for no syst case when entering pruning plotting method
+        
 2015-10-22 Michele Pinamonti <michele.pinamonti@gmail.com>
         * TtHFit: add possibiliy of Selection for Sample
         
